# Dragonfly

./: MISSING_COMPONENTS.md  README.md  START_HERE.md  pyproject.toml
diagrams/: 02_data_flow_sequence.mmd  04_pipeline_state_machine.mmd  05_data_model_class.mmd  ACCESS_VERIFICATION.md  view_all_diagrams.html
docs/: VPS500_LOWRES_NBR_DNBR_DESIGN.md  extended.md
example/artifacts/: synthetic_dnbr_overlay.html
examples/: pipeline_example.py  visualize_dnbr_overlay.py
files/: 01_system_architecture.mmd  03_component_interaction.mmd  06_spatial_query.mmd  07_band_processing.mmd  08_error_handling.mmd  DIAGRAMS_GUIDE.md  README.md  START_HERE.md  eo_diagrams.md  esa_data_access_nbr_guide.md  technical_analysis.md  view_all_diagrams.html
src/dragonfly/: __init__.py  aoi.py  data_access.py  pipeline.py  processing.py  viz.py
src/dragonfly/tests/: test_visual_scenario.py  test_visualization.py
