[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dragonfly"
version = "0.1.0"
description = "NBR/dNBR processing pipeline with Sentinel-2 connector and OpenStreetMap overlays"
authors = [{name = "Dragonfly Team"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "requests>=2.31",
    "shapely>=2.0",
    "rasterio>=1.3",
    "folium>=0.15",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
